# Tau

./: README.md  index.html  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: release.yml
src/: App.css  App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/src/: lib.rs
src/components/FloatingMenu/: ManualModel.tsx  index.tsx
src/components/FloatingMenu/actions/: delete.ts  export.ts  import.ts  qr.ts
src/components/FloatingMenu/icons/: Export.tsx  Import.tsx  ManualIcon.tsx  MenuIcon.tsx  ScanIcon.tsx  delete.tsx
src/components/Header/: index.tsx
src/components/Main/: Image.tsx  card.tsx  index.tsx
src/hooks/: useEffectOnce.tsx
src/libs/: FS.ts  deepLink.ts  fetchAndCacheIcon.ts  parseAndInsert.ts
